--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Các dấu hiệu thính giác bị ảnh hưởng",
+    "content": "Bài viết đề cập đến các dấu hiệu cho thấy thính giác bị ảnh hưởng, bao gồm khó khăn trong việc nghe rõ lời nói, dễ giật mình trước âm thanh lớn và khó tập trung trong không gian ồn ào. Tuổi tác và các yếu tố môi trường như tiếng ồn lớn và hóa chất có thể gây tổn hại cho tế bào lông trong tai, dẫn đến mất thính lực. Các bác sĩ khuyến cáo rằng nếu gặp phải những dấu hiệu này, người đọc nên xem xét việc khám thính lực và sử dụng máy trợ thính nếu cần.",
+    "link": "https://vnexpress.net/cac-dau-hieu-thinh-giac-bi-anh-huong-4853180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Các dấu hiệu nào cho thấy thính giác bị ảnh hưởng?",
+    "answers": [
+      {
+        "text": "Khó nghe rõ lời nói và dễ giật mình trước âm thanh lớn",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nghe được âm thanh tần số thấp",
+        "correct": false
+      },
+      {
+        "text": "Không thấy được âm thanh trong môi trường yên tĩnh",
+        "correct": false
+      },
+      {
+        "text": "Luôn cảm thấy thính giác tốt hơn trước đây",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Garnacho được khuyên thôi bắt chước Ronaldo",
     "content": "Cựu cầu thủ Man Utd, Paul Parker, khuyên Alejandro Garnacho nên dừng việc bắt chước Cristiano Ronaldo và tập trung vào việc phát triển bản thân. Parker chỉ trích Garnacho vì hành vi thiếu chín chắn và không nỗ lực trong thi đấu, cho rằng cậu cần nhận thức rõ khả năng của mình để có sự nghiệp tốt hơn. Sau một thời gian khởi sắc, Garnacho đã sa sút phong độ và cách hành xử, không còn thể hiện được những gì kỳ vọng.",
     "link": "https://vnexpress.net/garnacho-duoc-khuyen-thoi-bat-chuoc-ronaldo-4866360.html",
@@ -1112,6 +1139,33 @@
     ]
   },
   {
+    "title": "Tình yêu của cô gái Nhật và chàng nông dân Việt",
+    "content": "Câu chuyện tình yêu giữa Miwa, một cô gái Nhật Bản 30 tuổi và Quang Huy, chàng nông dân 29 tuổi ở Lâm Đồng, bắt đầu từ chuyến đi trải nghiệm nông trại. Miwa đã không chỉ thu hoạch cà phê mà còn học hỏi về văn hóa và cuộc sống của người nông dân Việt Nam. Tình cảm giữa họ phát triển qua những lần Miwa trở lại Việt Nam, giúp Huy trong công việc và cùng nhau thực hiện ước mơ khởi nghiệp với quán cà phê sạch. Họ đã vượt qua nhiều khó khăn và khoảng cách để xây dựng một mối quan hệ bền vững.",
+    "link": "https://vnexpress.net/tinh-yeu-cua-co-gai-nhat-va-chang-nong-dan-viet-4862674.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tình yêu giữa Miwa và Quang Huy bắt đầu từ đâu?",
+    "answers": [
+      {
+        "text": "Chuyến đi trải nghiệm nông trại",
+        "correct": true
+      },
+      {
+        "text": "Một cuộc thi cà phê",
+        "correct": false
+      },
+      {
+        "text": "Một chương trình văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Một cuộc gặp gỡ tình cờ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Yamaha YZF-R9 lần đầu ra mắt thị trường Đông Nam Á",
     "content": "Yamaha YZF-R9, mẫu sportbike 900 phân khối, đã lần đầu tiên ra mắt tại triển lãm Bangkok Motor Show 2025 ở Thái Lan. Xe được trang bị động cơ 3 xi-lanh 890 phân khối, công suất 106 mã lực và nhiều công nghệ hiện đại như bộ điều khiển điện tử YRC và hệ thống hỗ trợ sang số nhanh. Mặc dù chưa có thông tin về giá bán, Yamaha đã giới thiệu R9 với nhiều tính năng nổi bật, hứa hẹn sẽ thu hút sự chú ý của người yêu thích xe máy trong khu vực Đông Nam Á.",
     "link": "https://vnexpress.net/yamaha-yzf-r9-lan-dau-ra-mat-thi-truong-dong-nam-a-4865989.html",
@@ -1196,33 +1250,6 @@
       },
       {
         "text": "Vì muốn thăm người thân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tình yêu của cô gái Nhật và chàng nông dân Việt",
-    "content": "Câu chuyện tình yêu giữa Miwa, một cô gái Nhật Bản 30 tuổi và Quang Huy, chàng nông dân 29 tuổi ở Lâm Đồng, bắt đầu từ chuyến đi trải nghiệm nông trại. Miwa đã không chỉ thu hoạch cà phê mà còn học hỏi về văn hóa và cuộc sống của người nông dân Việt Nam. Tình cảm giữa họ phát triển qua những lần Miwa trở lại Việt Nam, giúp Huy trong công việc và cùng nhau thực hiện ước mơ khởi nghiệp với quán cà phê sạch. Họ đã vượt qua nhiều khó khăn và khoảng cách để xây dựng một mối quan hệ bền vững.",
-    "link": "https://vnexpress.net/tinh-yeu-cua-co-gai-nhat-va-chang-nong-dan-viet-4862674.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tình yêu giữa Miwa và Quang Huy bắt đầu từ đâu?",
-    "answers": [
-      {
-        "text": "Chuyến đi trải nghiệm nông trại",
-        "correct": true
-      },
-      {
-        "text": "Một cuộc thi cà phê",
-        "correct": false
-      },
-      {
-        "text": "Một chương trình văn hóa",
-        "correct": false
-      },
-      {
-        "text": "Một cuộc gặp gỡ tình cờ",
         "correct": false
       }
     ]
@@ -1846,37 +1873,6 @@
     ]
   },
   {
-    "title": "Vì sao ôtô điện được dùng dẫn tốc trong marathon",
-    "content": "Ôtô điện đang được sử dụng để dẫn tốc trong các giải marathon nhờ khả năng duy trì vận tốc chính xác và không phát thải khí độc hại. Việc áp dụng xe điện không chỉ giúp các vận động viên tránh được tác động tiêu cực từ khói bụi mà còn hỗ trợ họ trong việc giữ nhịp chạy ổn định. Gần đây, nhiều giải marathon tại Việt Nam đã chuyển sang sử dụng ôtô điện như một phần trong xu hướng tổ chức các sự kiện thể thao thân thiện với môi trường và bền vững.",
-    "link": "https://vnexpress.net/vi-sao-oto-dien-duoc-dung-dan-toc-trong-marathon-4865481.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao ôtô điện được chọn làm phương tiện dẫn tốc trong marathon?",
-    "answers": [
-      {
-        "text": "Vì ôtô điện không phát thải khí độc và duy trì tốc độ chính xác.",
-        "correct": true
-      },
-      {
-        "text": "Vì ôtô điện có giá thành rẻ hơn ôtô chạy xăng.",
-        "correct": false
-      },
-      {
-        "text": "Vì ôtô điện có thiết kế đẹp hơn các loại xe khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì ôtô điện có thể chạy nhanh hơn ôtô chạy xăng.",
-        "correct": false
-      },
-      {
-        "text": "Vì ôtô điện được ưa chuộng trong các cuộc đua xe khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
     "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
     "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
@@ -1957,6 +1953,37 @@
       },
       {
         "text": "Trường tiểu học tư thục",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao ôtô điện được dùng dẫn tốc trong marathon",
+    "content": "Ôtô điện đang được sử dụng để dẫn tốc trong các giải marathon nhờ khả năng duy trì vận tốc chính xác và không phát thải khí độc hại. Việc áp dụng xe điện không chỉ giúp các vận động viên tránh được tác động tiêu cực từ khói bụi mà còn hỗ trợ họ trong việc giữ nhịp chạy ổn định. Gần đây, nhiều giải marathon tại Việt Nam đã chuyển sang sử dụng ôtô điện như một phần trong xu hướng tổ chức các sự kiện thể thao thân thiện với môi trường và bền vững.",
+    "link": "https://vnexpress.net/vi-sao-oto-dien-duoc-dung-dan-toc-trong-marathon-4865481.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao ôtô điện được chọn làm phương tiện dẫn tốc trong marathon?",
+    "answers": [
+      {
+        "text": "Vì ôtô điện không phát thải khí độc và duy trì tốc độ chính xác.",
+        "correct": true
+      },
+      {
+        "text": "Vì ôtô điện có giá thành rẻ hơn ôtô chạy xăng.",
+        "correct": false
+      },
+      {
+        "text": "Vì ôtô điện có thiết kế đẹp hơn các loại xe khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì ôtô điện có thể chạy nhanh hơn ôtô chạy xăng.",
+        "correct": false
+      },
+      {
+        "text": "Vì ôtô điện được ưa chuộng trong các cuộc đua xe khác.",
         "correct": false
       }
     ]
@@ -2816,28 +2843,28 @@
     ]
   },
   {
-    "title": "Tiêm corticoid trị sẹo lồi",
-    "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
-    "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
+    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
+    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tiêm corticoid có tác dụng gì trong việc điều trị sẹo lồi?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
     "answers": [
       {
-        "text": "Giảm quá trình viêm và sản xuất collagen ở sẹo lồi.",
+        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
         "correct": true
       },
       {
-        "text": "Tăng kích thước sẹo lồi.",
+        "text": "Tăng cường sức khỏe xương và tinh thần.",
         "correct": false
       },
       {
-        "text": "Kích thích sản xuất collagen nhiều hơn.",
+        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
         "correct": false
       },
       {
-        "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
+        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
         "correct": false
       }
     ]
@@ -2870,28 +2897,28 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
-    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
+    "title": "Tiêm corticoid trị sẹo lồi",
+    "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
+    "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tiêm corticoid có tác dụng gì trong việc điều trị sẹo lồi?",
     "answers": [
       {
-        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
+        "text": "Giảm quá trình viêm và sản xuất collagen ở sẹo lồi.",
         "correct": true
       },
       {
-        "text": "Tăng cường sức khỏe xương và tinh thần.",
+        "text": "Tăng kích thước sẹo lồi.",
         "correct": false
       },
       {
-        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
+        "text": "Kích thích sản xuất collagen nhiều hơn.",
         "correct": false
       },
       {
-        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
+        "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
         "correct": false
       }
     ]
@@ -4887,33 +4914,6 @@
     ]
   },
   {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
-    "answers": [
-      {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
-        "correct": true
-      },
-      {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
-        "correct": false
-      },
-      {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
     "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
     "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
@@ -4940,6 +4940,33 @@
       },
       {
         "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "answers": [
+      {
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "correct": true
+      },
+      {
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -5211,33 +5238,6 @@
       },
       {
         "text": "Rời khỏi đội tuyển Tây Ban Nha",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phẫu thuật '3 trong 1' chữa vô sinh cho người đàn ông 120 kg",
-    "content": "Anh Tony, 39 tuổi, nặng 120 kg và mắc nhiều bệnh lý như đái tháo đường và viêm bao quy đầu, đã trải qua phẫu thuật '3 trong 1' tại Bệnh viện Đa khoa Tâm Anh TP HCM để điều trị vô sinh. Sau phẫu thuật, bác sĩ đã thu được 10 ống sinh tinh tiềm năng từ tinh hoàn, đủ cho 3 chu kỳ thụ tinh trong ống nghiệm (IVF). Anh Tony được khuyến nghị cải thiện chế độ ăn uống và sinh hoạt để giảm cân, trong khi vợ anh sẽ tiếp tục điều trị để có con. Đây là một ví dụ điển hình về việc điều trị vô sinh toàn diện cho nam giới mắc bệnh lý phức tạp.",
-    "link": "https://vnexpress.net/phau-thuat-3-trong-1-chua-vo-sinh-cho-nguoi-dan-ong-120-kg-4865809.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Phẫu thuật '3 trong 1' đã giúp anh Tony điều trị vấn đề gì?",
-    "answers": [
-      {
-        "text": "Vô sinh",
-        "correct": true
-      },
-      {
-        "text": "Đái tháo đường",
-        "correct": false
-      },
-      {
-        "text": "Béo phì",
-        "correct": false
-      },
-      {
-        "text": "Viêm bao quy đầu",
         "correct": false
       }
     ]
