--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Sản xuất xanh: cơ hội dẫn dắt thị trường",
+    "content": "Bài viết khám phá tầm quan trọng của sản xuất xanh trong việc phát triển bền vững ở Việt Nam. Sản xuất xanh không chỉ giảm thiểu tác động tiêu cực đến môi trường mà còn tạo ra sản phẩm chất lượng cao, đáp ứng nhu cầu ngày càng cao của người tiêu dùng. Các doanh nghiệp cần chủ động chuyển đổi sang sản xuất xanh để tăng khả năng cạnh tranh và tiếp cận thị trường toàn cầu, đồng thời cần có chính sách hỗ trợ từ chính phủ.",
+    "link": "https://tuoitre.vn/san-xuat-xanh-co-hoi-dan-dat-thi-truong-2025032700155833.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao sản xuất xanh lại quan trọng đối với doanh nghiệp hiện nay?",
+    "answers": [
+      {
+        "text": "Nó giúp tăng cường khả năng cạnh tranh và đáp ứng nhu cầu người tiêu dùng.",
+        "correct": true
+      },
+      {
+        "text": "Nó chỉ dành cho các doanh nghiệp lớn.",
+        "correct": false
+      },
+      {
+        "text": "Nó không ảnh hưởng đến môi trường.",
+        "correct": false
+      },
+      {
+        "text": "Nó làm tăng chi phí sản xuất ngay lập tức.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Các dấu hiệu thính giác bị ảnh hưởng",
     "content": "Bài viết đề cập đến các dấu hiệu cho thấy thính giác bị ảnh hưởng, bao gồm khó khăn trong việc nghe rõ lời nói, dễ giật mình trước âm thanh lớn và khó tập trung trong không gian ồn ào. Tuổi tác và các yếu tố môi trường như tiếng ồn lớn và hóa chất có thể gây tổn hại cho tế bào lông trong tai, dẫn đến mất thính lực. Các bác sĩ khuyến cáo rằng nếu gặp phải những dấu hiệu này, người đọc nên xem xét việc khám thính lực và sử dụng máy trợ thính nếu cần.",
     "link": "https://vnexpress.net/cac-dau-hieu-thinh-giac-bi-anh-huong-4853180.html",
@@ -1116,33 +1143,6 @@
     ]
   },
   {
-    "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
-    "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
-    "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để chọn tên tỉnh thành sau sáp nhập?",
-    "answers": [
-      {
-        "text": "Chọn tên của địa phương nổi bật hơn",
-        "correct": true
-      },
-      {
-        "text": "Chọn tên mới không liên quan đến lịch sử",
-        "correct": false
-      },
-      {
-        "text": "Giữ nguyên tên cũ của tất cả các tỉnh",
-        "correct": false
-      },
-      {
-        "text": "Ghép tên của hai vùng đất không liên quan",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
     "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
     "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
@@ -1165,6 +1165,33 @@
       },
       {
         "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
+    "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
+    "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để chọn tên tỉnh thành sau sáp nhập?",
+    "answers": [
+      {
+        "text": "Chọn tên của địa phương nổi bật hơn",
+        "correct": true
+      },
+      {
+        "text": "Chọn tên mới không liên quan đến lịch sử",
+        "correct": false
+      },
+      {
+        "text": "Giữ nguyên tên cũ của tất cả các tỉnh",
+        "correct": false
+      },
+      {
+        "text": "Ghép tên của hai vùng đất không liên quan",
         "correct": false
       }
     ]
@@ -1564,32 +1591,32 @@
     ]
   },
   {
-    "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
-    "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
-    "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
-    "cat": "suc-khoe",
+    "title": "Vì sao ôtô điện được dùng dẫn tốc trong marathon",
+    "content": "Ôtô điện đang được sử dụng để dẫn tốc trong các giải marathon nhờ khả năng duy trì vận tốc chính xác và không phát thải khí độc hại. Việc áp dụng xe điện không chỉ giúp các vận động viên tránh được tác động tiêu cực từ khói bụi mà còn hỗ trợ họ trong việc giữ nhịp chạy ổn định. Gần đây, nhiều giải marathon tại Việt Nam đã chuyển sang sử dụng ôtô điện như một phần trong xu hướng tổ chức các sự kiện thể thao thân thiện với môi trường và bền vững.",
+    "link": "https://vnexpress.net/vi-sao-oto-dien-duoc-dung-dan-toc-trong-marathon-4865481.html",
+    "cat": "the-thao",
     "positivity": 8,
     "importance": 7,
-    "question": "Chạy bộ có tác dụng gì đối với sức khỏe tinh thần?",
+    "question": "Tại sao ôtô điện được chọn làm phương tiện dẫn tốc trong marathon?",
     "answers": [
       {
-        "text": "Giúp cải thiện tâm trạng và cảm giác gắn kết",
+        "text": "Vì ôtô điện không phát thải khí độc và duy trì tốc độ chính xác.",
         "correct": true
       },
       {
-        "text": "Làm giảm tốc độ chạy",
+        "text": "Vì ôtô điện có giá thành rẻ hơn ôtô chạy xăng.",
         "correct": false
       },
       {
-        "text": "Tăng cường sức mạnh cơ bắp",
+        "text": "Vì ôtô điện có thiết kế đẹp hơn các loại xe khác.",
         "correct": false
       },
       {
-        "text": "Giảm nguy cơ chấn thương",
+        "text": "Vì ôtô điện có thể chạy nhanh hơn ôtô chạy xăng.",
         "correct": false
       },
       {
-        "text": "Không có tác dụng gì đối với sức khỏe tâm thần",
+        "text": "Vì ôtô điện được ưa chuộng trong các cuộc đua xe khác.",
         "correct": false
       }
     ]
@@ -1622,6 +1649,37 @@
     ]
   },
   {
+    "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
+    "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
+    "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có tác dụng gì đối với sức khỏe tinh thần?",
+    "answers": [
+      {
+        "text": "Giúp cải thiện tâm trạng và cảm giác gắn kết",
+        "correct": true
+      },
+      {
+        "text": "Làm giảm tốc độ chạy",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức mạnh cơ bắp",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ chấn thương",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì đối với sức khỏe tâm thần",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
     "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
     "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
@@ -1644,37 +1702,6 @@
       },
       {
         "text": "Trường tiểu học tư thục",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao ôtô điện được dùng dẫn tốc trong marathon",
-    "content": "Ôtô điện đang được sử dụng để dẫn tốc trong các giải marathon nhờ khả năng duy trì vận tốc chính xác và không phát thải khí độc hại. Việc áp dụng xe điện không chỉ giúp các vận động viên tránh được tác động tiêu cực từ khói bụi mà còn hỗ trợ họ trong việc giữ nhịp chạy ổn định. Gần đây, nhiều giải marathon tại Việt Nam đã chuyển sang sử dụng ôtô điện như một phần trong xu hướng tổ chức các sự kiện thể thao thân thiện với môi trường và bền vững.",
-    "link": "https://vnexpress.net/vi-sao-oto-dien-duoc-dung-dan-toc-trong-marathon-4865481.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao ôtô điện được chọn làm phương tiện dẫn tốc trong marathon?",
-    "answers": [
-      {
-        "text": "Vì ôtô điện không phát thải khí độc và duy trì tốc độ chính xác.",
-        "correct": true
-      },
-      {
-        "text": "Vì ôtô điện có giá thành rẻ hơn ôtô chạy xăng.",
-        "correct": false
-      },
-      {
-        "text": "Vì ôtô điện có thiết kế đẹp hơn các loại xe khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì ôtô điện có thể chạy nhanh hơn ôtô chạy xăng.",
-        "correct": false
-      },
-      {
-        "text": "Vì ôtô điện được ưa chuộng trong các cuộc đua xe khác.",
         "correct": false
       }
     ]
@@ -2136,6 +2163,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -2162,33 +2216,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -2534,28 +2561,28 @@
     ]
   },
   {
-    "title": "Áp lực học thêm của học sinh Hàn Quốc lan tới... Australia",
-    "content": "Bài viết đề cập đến việc áp lực học thêm từ Hàn Quốc đã lan rộng đến Australia, nơi mà dịch vụ gia sư tại nhà đang bùng nổ. Ngành công nghiệp dạy thêm tại Australia ước tính trị giá hơn 1 tỷ USD, với nhiều gia đình gốc Á, đặc biệt là người Hàn, đang chi tiêu cho việc học thêm của con cái. Mặc dù việc học thêm giúp nâng cao kết quả học tập, nhưng áp lực thành tích cũng gây ra những vấn đề tâm lý cho học sinh và giáo viên. Các chuyên gia cảnh báo về sự thiếu giám sát đối với các trung tâm dạy thêm và khuyến nghị cần có quy định rõ ràng hơn để bảo vệ trẻ em.",
-    "link": "https://dantri.com.vn/giao-duc/ap-luc-hoc-them-cua-hoc-sinh-han-quoc-lan-toi-australia-20250324215841973.htm",
-    "cat": "giao-duc",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Áp lực học thêm từ cộng đồng nào đã lan tới Australia?",
+    "title": "Tiêm corticoid trị sẹo lồi",
+    "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
+    "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tiêm corticoid có tác dụng gì trong việc điều trị sẹo lồi?",
     "answers": [
       {
-        "text": "Cộng đồng người Hàn Quốc",
+        "text": "Giảm quá trình viêm và sản xuất collagen ở sẹo lồi.",
         "correct": true
       },
       {
-        "text": "Cộng đồng người Mỹ",
+        "text": "Tăng kích thước sẹo lồi.",
         "correct": false
       },
       {
-        "text": "Cộng đồng người Anh",
+        "text": "Kích thích sản xuất collagen nhiều hơn.",
         "correct": false
       },
       {
-        "text": "Cộng đồng người Pháp",
+        "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
         "correct": false
       }
     ]
@@ -2588,28 +2615,28 @@
     ]
   },
   {
-    "title": "Tiêm corticoid trị sẹo lồi",
-    "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
-    "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tiêm corticoid có tác dụng gì trong việc điều trị sẹo lồi?",
+    "title": "Áp lực học thêm của học sinh Hàn Quốc lan tới... Australia",
+    "content": "Bài viết đề cập đến việc áp lực học thêm từ Hàn Quốc đã lan rộng đến Australia, nơi mà dịch vụ gia sư tại nhà đang bùng nổ. Ngành công nghiệp dạy thêm tại Australia ước tính trị giá hơn 1 tỷ USD, với nhiều gia đình gốc Á, đặc biệt là người Hàn, đang chi tiêu cho việc học thêm của con cái. Mặc dù việc học thêm giúp nâng cao kết quả học tập, nhưng áp lực thành tích cũng gây ra những vấn đề tâm lý cho học sinh và giáo viên. Các chuyên gia cảnh báo về sự thiếu giám sát đối với các trung tâm dạy thêm và khuyến nghị cần có quy định rõ ràng hơn để bảo vệ trẻ em.",
+    "link": "https://dantri.com.vn/giao-duc/ap-luc-hoc-them-cua-hoc-sinh-han-quoc-lan-toi-australia-20250324215841973.htm",
+    "cat": "giao-duc",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Áp lực học thêm từ cộng đồng nào đã lan tới Australia?",
     "answers": [
       {
-        "text": "Giảm quá trình viêm và sản xuất collagen ở sẹo lồi.",
+        "text": "Cộng đồng người Hàn Quốc",
         "correct": true
       },
       {
-        "text": "Tăng kích thước sẹo lồi.",
+        "text": "Cộng đồng người Mỹ",
         "correct": false
       },
       {
-        "text": "Kích thích sản xuất collagen nhiều hơn.",
+        "text": "Cộng đồng người Anh",
         "correct": false
       },
       {
-        "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
+        "text": "Cộng đồng người Pháp",
         "correct": false
       }
     ]
